Docs: Simplify and consolidate documentation
- Merge INSTALLATION.md into QUICKSTART.md
- Reduce USAGE.md from 820 to 119 lines
- Simplify ADVANCED.md (remove unused sections)
- Fix crontab references to systemd timers
- Update cross-references between docs